--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "export": "npx expo export --platform web",
+    "predeploy": "npm run export",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.8",
-    "expo": "~52.0.37",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-dom": "18.3.1",
-    "react-native-web": "~0.19.13",
-    "@expo/metro-runtime": "~4.0.1"
+    "expo": "^49.0.0",
+    "react": "18.2.0",
+    "react-native": "0.72.0",
+    "react-dom": "^18.2.0",
+    "react-native-web": "^0.18.0",
+    "@rneui/themed": "^4.0.0",
+    "@rneui/base": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "gh-pages": "^4.0.0"
   },
-  "private": true
+  "homepage": "https://TrizJS.github.io/projectname/"
 }
