--- a/app.json
+++ b/app.json
@@ -23,6 +23,17 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "af790d95-afdf-4ee7-8611-5064f2455cfb"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/af790d95-afdf-4ee7-8611-5064f2455cfb"
     }
   }
 }
