--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "projectname",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
-    "build": "npx expo export --ouptut-dir web-build --platform web",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d web-build"
-  },
+ "scripts": {
+  "start": "expo start",
+  "android": "expo run:android",
+  "ios": "expo run:ios",
+  "web": "expo start --web",
+  "build": "npx expo export --output-dir web-build --platform web",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d web-build"
+},
   "dependencies": {
     "expo": "^49.0.0",
     "react": "18.2.0",
