--- a/app.json
+++ b/app.json
@@ -22,7 +22,10 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png"
+      "favicon": "./assets/favicon.png",
+      "build": {
+        "output": "web-build"
+      }
     },
     "extra": {
       "eas": {
